@@ -38,6 +38,7 @@ gerritclient =
     account_password_set=gerritclient.commands.account:AccountSetPassword
     account_password_delete=gerritclient.commands.account:AccountDeletePassword
     account_name_set=gerritclient.commands.account:AccountSetName
+    account_oauth_show=gerritclient.commands.account:AccountOAuthShow
     account_show=gerritclient.commands.account:AccountShow
     account_ssh-key_add=gerritclient.commands.account:AccountSSHKeyAdd
     account_ssh-key_delete=gerritclient.commands.account:AccountSSHKeyDelete
